; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_fstab-util.c_fstab_node_to_udev_node.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_fstab-util.c_fstab_node_to_udev_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"LABEL=\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"label\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"UUID=\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"uuid\00", align 1
@.str.4 = private unnamed_addr constant [10 x i8] c"PARTUUID=\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"partuuid\00", align 1
@.str.6 = private unnamed_addr constant [11 x i8] c"PARTLABEL=\00", align 1
@.str.7 = private unnamed_addr constant [10 x i8] c"partlabel\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fstab_node_to_udev_node(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i32 @assert(i8* %4)
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @startswith(i8* %6, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = getelementptr inbounds i8, i8* %10, i64 6
  %12 = call i8* @tag_to_udev_node(i8* %11, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  store i8* %12, i8** %2, align 8
  br label %40

13:                                               ; preds = %1
  %14 = load i8*, i8** %3, align 8
  %15 = call i64 @startswith(i8* %14, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %13
  %18 = load i8*, i8** %3, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 5
  %20 = call i8* @tag_to_udev_node(i8* %19, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  store i8* %20, i8** %2, align 8
  br label %40

21:                                               ; preds = %13
  %22 = load i8*, i8** %3, align 8
  %23 = call i64 @startswith(i8* %22, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0))
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %21
  %26 = load i8*, i8** %3, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 9
  %28 = call i8* @tag_to_udev_node(i8* %27, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0))
  store i8* %28, i8** %2, align 8
  br label %40

29:                                               ; preds = %21
  %30 = load i8*, i8** %3, align 8
  %31 = call i64 @startswith(i8* %30, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.6, i64 0, i64 0))
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %29
  %34 = load i8*, i8** %3, align 8
  %35 = getelementptr inbounds i8, i8* %34, i64 10
  %36 = call i8* @tag_to_udev_node(i8* %35, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.7, i64 0, i64 0))
  store i8* %36, i8** %2, align 8
  br label %40

37:                                               ; preds = %29
  %38 = load i8*, i8** %3, align 8
  %39 = call i8* @strdup(i8* %38)
  store i8* %39, i8** %2, align 8
  br label %40

40:                                               ; preds = %37, %33, %25, %17, %9
  %41 = load i8*, i8** %2, align 8
  ret i8* %41
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i64 @startswith(i8*, i8*) #1

declare dso_local i8* @tag_to_udev_node(i8*, i8*) #1

declare dso_local i8* @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
